flaskr/static/style.css
html {
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    background: #eee;
    padding: 1rem;

    height: 100vh;
    width: 100%;

    box-sizing: border-box;
}

body {
    margin: 0 auto;
    background: white;


    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
}

.content-wrapper {
    width: 100%;
    height: 95%;
}

.content-wrapper > * {
}

h1 {
    color: #377ba8;
    margin: 1rem 0;
}


hr {
    border: none;
    border-top: 1px solid lightgray;
}

nav {
    background: lightgray;
    display: flex;
    align-items: center;
    padding: 0 0.5rem;
    height: 5%;
    box-sizing: border-box;

}

nav h1 {
    flex: auto;
    margin: 0;
}

nav h1 {
    text-decoration: none;
    padding: 0.25rem 0.5rem;
}

nav ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
}

nav ul li, nav ul li span, header .action {
    display: block;
    padding: 0.5rem;
}

.content {
    padding: 0 1rem 1rem;
    box-sizing: border-box;

    width: 100%;
    height: 100%;
}

.content > header {
    border-bottom: 1px solid lightgray;
    display: flex;
    align-items: flex-end;
}

.content > header h1 {
    flex: auto;
    margin: 1rem 0 0.25rem 0;
    box-sizing: border-box;
}

.flash {
    margin: 1em 0;
    padding: 1em;
    background: #cae6f6;
    border: 1px solid #377ba8;
    box-sizing: border-box;

}

.post > header {
    display: flex;
    align-items: flex-end;
    font-size: 0.85em;
}

.post > header > div:first-of-type {
    flex: auto;
}

.post > header h1 {
    font-size: 1.5em;
    margin-bottom: 0;
}

.post .about {
    color: slategray;
    font-style: italic;
}

.post .body {
    white-space: pre-line;
}

.content:last-child {
    margin-bottom: 0;
}

.content form {
    margin: 1em 0;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;

}

.content label {
    font-weight: bold;
    margin-bottom: 0.5em;
    box-sizing: border-box;

}

.content input, .content textarea {
    box-sizing: border-box;
}

.content textarea {
    min-height: 12em;
    resize: vertical;
}

input.danger {
    color: #cc2f2e;
}

input[type=submit] {
    align-self: start;
    min-width: 10em;
}

#chat-wrapper {
    border-left: 1px solid grey;
    border-right: 1px solid grey;
    border-bottom: 1px solid grey;


    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#messages {
    list-style-type: none;
    overflow-y: auto;
}

#game-wrapper {
    display: none;
    flex-direction: column;
    justify-content: space-around;
}


.main-content {
    flex: 7;
}

.secondary-content {
    flex: 3;
}

.main-wrapper {
    height: 100%;
    width: 100%;
    box-sizing: border-box;

    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

#button-bar {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.custom-input {
    display: inline-block;
    padding: 0.35em 1.2em;
    border: 0.1em solid #222222;
    margin: 0 0.3em 0.3em 0;
    border-radius: 0.12em;
    box-sizing: border-box;

    -webkit-appearance: none;
    height: 32px;
}

.custom-button {
    text-decoration: none;
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    font-weight: 300;
    color: #222222;
    text-align: center;
    transition: all 0.2s;
}

.custom-button:hover {
    color: #222222;
    background-color: #BBBBBB;
}

#messageform {
    display: flex;
    flex-direction: row;
    width: 100%;
}

#messageform > input {
    flex: 7;
    margin-right: 4px;
}

#messageform > button {
    flex: 3;
}

.user-entry {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    padding: 4px;
    border-bottom: 1px solid #222222;
    margin-bottom: 8px;
}

.user-entry-name {
    font-size: 16px;
    font-weight: 300;
}

.user-list {
    width: 30%;
}

#canvas-wrapper {
    display: flex;
    justify-content: center;
}

.chip-display {
    display: flex;
    flex-direction: column;

    text-align: center;
    background-color: #EEEEEE;
    user-select: none;
}

.chip-image-wrapper {
    flex: 5;
}

.chip-image {
    width: 80px;
    height: 80px;
}

.chip-bottom {
    flex: 1;
}


/* Slider styling
     Taken from https://codepen.io/mayuMPH/pen/ZjxGEY
*/

.rs-range {
    width: 220px;
    -webkit-appearance: none;
}

.rs-range:focus {
    outline: none;
}

.rs-range::-webkit-slider-runnable-track {
    width: 100%;
    height: 1px;
    cursor: pointer;
    box-shadow: none;
    background: #222;
    border-radius: 0px;
    border: 0px solid #010101;
}

.rs-range::-moz-range-track {
    width: 100%;
    height: 1px;
    cursor: pointer;
    box-shadow: none;
    background: #222;
    border-radius: 0px;
    border: 0px solid #010101;
}

.rs-range::-webkit-slider-thumb {
    border: 0 solid #ffffff;
    height: 22px;
    width: 22px;
    border-radius: 22px;
    background: #444;
    cursor: pointer;
    -webkit-appearance: none;
}

.rs-range::-moz-range-thumb {
    border: 0 solid #ffffff;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
    height: 22px;
    width: 22px;
    border-radius: 22px;
    background: #444;
    cursor: pointer;
    -webkit-appearance: none;
}

.rs-range::-moz-focus-outer {
    border: 0;
}

.rs-label {
    position: relative;
    transform-origin: center center;
    display: block;
    width: 60px;
    height: 60px;

    background: transparent;
    border-radius: 50%;
    text-align: center;

    box-sizing: border-box;

    margin-left: -15px;
    color: #222;
    font-style: normal;
    font-weight: normal;
    line-height: normal;
    font-size: 16px;
}

.rs-label::after {
    content: "eur";
    display: block;
    font-size: 12px;
    letter-spacing: 0.07em;
    margin-top: -2px;
}

